Codesmell updates